# kustd

./: Cargo.toml  Dockerfile  LICENSE  index.yaml  readme.md
.github/workflows/: docker-publish.yml
charts/kustd/: Chart.yaml  values.yaml
charts/kustd/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  rbac.yaml
charts/kustd/templates/tests/: test-connection.yaml
docs/: contributing.md
src/: lib.rs  main.rs  manager.rs  syncable.rs
tests/: common.rs  manager_test.rs
tests/e2e/default/: 00-namespaces.yaml  01-assert.yaml  01-create.yaml  01-errors.yaml  02-update-resource.yaml  03-assert.yaml  03-update-sync-ann.yaml  04-assert.yaml  04-create-ns.yaml  05-errors.yaml  05-update-ns.yaml  06-update-ns.yaml  07-delete.yaml  07-errors.yaml
