[package]
name = "kustd"
version = "0.5.1"
authors = ["Jess <jess@ros.io>"]
edition = "2018"

[[bin]]
doc = false
name = "kustd"
path = "src/main.rs"

[lib]
name = "kustd"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.51"
chrono = "0.4"
either = "1.6.1"
futures = "0.3"
kube = { version = "0.63.2", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
thiserror = "1.0"
tokio = { version = "1.13.0", features = ["rt", "macros"] }
tokio-stream = "0.1.8"
rand = "0.8.4"
serde = "1.0.130"
serde_json = "1.0"
async-broadcast = "0.3.4"

[dev-dependencies]
ctor = "0.1.21"
test-context = "0.1.3"
serial_test = "*"
serde_yaml = "0.8.13"
