[package]
name = "kustd"
version = "0.6.1"
authors = ["Jess <jess@ros.io>"]
edition = "2018"

[[bin]]
doc = false
name = "kustd"
path = "src/main.rs"

[lib]
name = "kustd"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.51"
chrono = "0.4"
either = "1.6.1"
futures = "0.3"
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", default-features = false, features = [
  "v1_33",
] }
tracing = "0.1"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
tokio = { version = "1.13.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
rand = "0.9.1"
serde = "1.0.130"
serde_json = "1.0"
async-broadcast = "0.7.2"

[dev-dependencies]
ctor = "0.4.2"
test-context = "0.4.1"
serial_test = "*"
serde_yaml = "0.9.3"
base64 = "0.22.1"
env_logger = "0.11.8"
